- Fix PHP warnings - When creating a new property, is directly directed to the new mask - Added list overview link - Added translations (en)

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php":"^7.4 || ^8.0",
     "contao/core-bundle":">=4.9",
     "oveleon/contao-be-field-dependency": ">=0.4",
-    "contao-estatemanager/core": "*"
+    "contao-estatemanager/core": ">=1.1"
   },
   "require-dev": {
     "contao/manager-plugin": "^2.0",
